fix (Commands) : fix creation of vault