@@ -7,8 +7,10 @@ import fr.traqueur.vaults.api.vaults.Vault;
 import fr.traqueur.vaults.api.vaults.VaultItem;
 import fr.traqueur.vaults.api.vaults.VaultOwner;
 
+import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
+import java.util.stream.Collectors;
 
 public class ZVaultRepository implements Repository<Vault, VaultDTO> {
 
@@ -21,14 +23,22 @@ public class ZVaultRepository implements Repository<Vault, VaultDTO> {
     @Override
     public Vault toEntity(VaultDTO vaultDTO) {
         VaultOwner owner = ownerResolver.resolveOwner(vaultDTO.ownerType(), vaultDTO.owner());
-        List<VaultItem> content = Arrays.stream(vaultDTO.content().split(";")).map(VaultItem::deserialize).toList();
+        List<VaultItem> content;
+        if(vaultDTO.content().isEmpty()) {
+            content = new ArrayList<>();
+        } else {
+            content = Arrays.stream(vaultDTO.content().split(";"))
+                    .map(VaultItem::deserialize)
+                    .collect(Collectors.toList());
+        }
         return new ZVault(vaultDTO.uniqueId(), owner, content, vaultDTO.size(), vaultDTO.infinite());
     }
 
     @Override
     public VaultDTO toDTO(Vault entity) {
+        String serializedContent = entity.getContent().stream().map(VaultItem::serialize).reduce((a, b) -> a + ";" + b).orElse("");
         return new VaultDTO(entity.getUniqueId(), entity.getOwner().getUniqueId(), ownerResolver.getType(entity.getOwner().getClass()),
-                            entity.getContent().stream().map(VaultItem::serialize).reduce((a, b) -> a + ";" + b).orElse(""),
+                            serializedContent,
                             entity.getSize(), entity.isInfinite());
     }
 }
